Table "corpus" {
  "corpusid" TEXT [pk]
  "nowords" INTEGER
  "docount" INTEGER
}

Table "document" {
  "documentid" TEXT [pk]
  "corpusid" TEXT
  "filepath" TEXT
  "nowords" INTEGER
  "summary" TEXT
  "wordbag" TEXT
}

Table "textline" {
  "lineid" TEXT [pk]
  "documentid" TEXT [not null]
  "lineno" INTEGER
  "linetext" TEXT
  "possent" REAL
  "nuesent" REAL
  "negsent" REAL
  "compsent" REAL
}

Table "entity" {
  "entityname" TEXT [pk, not null]
  "variants" TEXT
}

Table "context" {
  "contextid" TEXT [pk]
  "entityname" TEXT [not null]
  "lineid" TEXT [not null]
}

Table "similarity" {
  "simmilarityid" TEXT [unique]
  "similitary" REAL
  "sourceid" TEXT
  "targetid" TEXT

Indexes {
  (sourceid, targetid) [pk]
}
}

Ref:"corpus"."corpusid" < "document"."corpusid"

Ref:"document"."documentid" < "textline"."documentid"

Ref:"entity"."entityname" < "context"."entityname"

Ref:"textline"."lineid" < "context"."lineid"

Ref:"document"."documentid" < "similarity"."sourceid"

Ref:"document"."documentid" < "similarity"."targetid"
